--- a/charves/server/parts_show.html
+++ b/charves/server/parts_show.html
@@ -1,8 +1,56 @@
 <!DOCTYPE html>
 <head>
+  <style>
+    div {
+      width:90px;
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  	
+  <script charset="UTF-8" type="text/javascript">
 
+    function getGoodList(){
+      $.ajax({
+            url: '/goods/list',
+            type: 'POST',
+            async: true,
+            data: JSON.stringify({
+              'optionNo' : $("#optionNo").val(),
+              'searchTxt' : $("#searchTxt").val(),
+            }),
+            contentType: "application/json",
+            success: function(response) {
+              if(response.code == 200){
+                let len = response.dataList.length;
+                let strRO = "<tr><td>";
+                let strTD = "</td><td>";
+                let strRC = "</td></tr>";
+                $("#dataListTable > tbody > tr").remove();
+                for(let i=0;i<len;i++){
+                  console.log(response.dataList[i]);
+                  $('#dataListTable > tbody:last').append(strRO + response.dataList[i].TRACK_NM 
+                                                        + strTD + response.dataList[i].DESCRIPTION
+                                                        + strTD + response.dataList[i].UPD_DT);
+                }
+              }else{
+                CommonAdmErrMessage(response.code, response.message);
+              }
+            },
+            error: function(error){
+              console.error(error); // 에러 처리
+              CommonAdmErrMessage(500, 'Ajax 통신에러');
+            }
+          });
+    }
+
+  </script>
 </head>
-<body>
-  여기는 (주)차베스 상품목록 조회 화면입니다.
+<body onload="javascript:getGoodList();">
+  여기는 (주)차베스 상품목록 조회 화면입니다.<br>
+  <div>
+
+  </div>
+
 </body>
 </html>
